--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,19 @@ bind C-a send-prefix
 
 # force reload of the config file
 unbind r
-bind r source-file ~/.tmux-conf
+bind r source-file ~/.tmux.conf
 
 # quick pane cycling
 unbind ^A
 bind ^A select-pane :-.+
+
+# enable mouse mode
+set -g mouse on
+
+setw -g mode-mouse on
+set -g mouse-select-window on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+
+# scroll history
+set -g history-limit 30000
