Update zshrc with vaulted config

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,9 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
+# vi mode
+set-window-option -g mode-keys vi
+
 # force reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
@@ -13,11 +16,6 @@ bind ^A select-pane :-.+
 
 # enable mouse mode
 set -g mouse on
-
-setw -g mode-mouse on
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
 
 # scroll history
 set -g history-limit 30000
