--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ set-window-option -g mode-keys vi
 
 # force reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # quick pane cycling
 unbind ^A
