--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/tpope/vim-sensible.git
 [submodule "vim/bundle/vim-tmux"]
 	path = vim/bundle/vim-tmux
-	url = git://github.com/tpope/vim-tmux.git
+	url = https://github.com/tmux-plugins/vim-tmux
