--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim/bundle/syntastic"]
 	path = vim/bundle/syntastic
 	url = https://github.com/vim-syntastic/syntastic.git
+[submodule "vim/bundle/vim-packer"]
+	path = vim/bundle/vim-packer
+	url = https://github.com/hashivim/vim-packer.git
