--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 [submodule "tmux/tmux.symlink/plugins/tpm"]
 	path = tmux/tmux.symlink/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
+[submodule "zsh/zplugin.symlink/bin"]
+	path = zsh/zplugin.symlink/bin
+	url = https://github.com/zdharma/zplugin.git
