--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+# check if tpm is installed; install if not
+run 'test -f ~/.tmux/plugins/tpm/tpm || git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'
 
 # -----------------------------------------------------------------------------
 # TERMINAL AND SHELL
