--- a/tmux.conf
+++ b/tmux.conf
@@ -1,27 +1,19 @@
+# BOOTSTRAP {{{
+# -----------------------------------------------------------------------------
 # check if tpm is installed; install if not
 run 'test -f ~/.tmux/plugins/tpm/tpm || git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'
+# }}}
 
+# TERMINAL AND SHELL {{{
 # -----------------------------------------------------------------------------
-# TERMINAL AND SHELL
-# -----------------------------------------------------------------------------
-
 set-option -g default-shell /bin/zsh
-
-#set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
-
-# (n)vim compability
 set -g default-terminal 'screen-256color'
-
-# Focus events for terminals that support them
 set -g focus-events on
+# }}}
 
+# WINDOWS AND PANES {{{
 # -----------------------------------------------------------------------------
-# WINDOWS AND PANES
-# -----------------------------------------------------------------------------
-
-#set -g set-clipboard on
-
 # Show times longer than supposed
 set -g display-panes-time 2000
 
@@ -44,17 +36,13 @@ set -g renumber-windows on
 set -g history-limit 1000000
 
 # Set title
-set -g set-titles on
-set -g set-titles-string "#T"
+set-option -g set-titles on
+set-option -g set-titles-string '#H:#S #W #T'
+# }}}
 
-# Open new splits and windows with the current working directory
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-
+# KEY BINDINGS {{{
 # -----------------------------------------------------------------------------
-# KEY BINDINGS
-# -----------------------------------------------------------------------------
+set -g mouse off
 
 # Set prefix to c-f instead of default c-b
 unbind C-b
@@ -68,18 +56,11 @@ bind-key C-f last-window
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# -----------------------------------------------------------------------------
-# VIM KEY BINDINGS
-# -----------------------------------------------------------------------------
-
-# Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-# Setup 'v' to begin selection as in Vim
+# Vim-like copy-mode
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-
-# Copy text with 'y' in copy mode
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel
 
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
@@ -94,68 +75,47 @@ bind-key J resize-pane -D 10
 bind-key K resize-pane -U 10
 bind-key L resize-pane -R 10
 
-# Select panes
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
 # don't suspend client
 unbind-key C-z
 
+# STATUS LINE {{{
 # -----------------------------------------------------------------------------
-# STATUS LINE
+set -g status-style "bg=colour0"
+set -g message-command-style "fg=colour7"
+set -g status-justify "centre"
+set -g status-left-length "100"
+set -g status "on"
+set -g message-style "bg=colour11,fg=colour7"
+set -g status-right-length "100"
+set -g message-command-style "bg=colour11"
+set -gq status-utf8 "on"
+setw -g window-status-style "fg=colour10,bg=colour0"
+setw -g window-status-activity-style "fg=colour14,bg=colour0"
+setw -g window-status-separator ""
+set -g status-left "#[fg=colour15,bg=colour14,bold] #S #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] #(whoami)@#H #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour10,bg=colour0] #{session_attached} #{?session_many_attached,clients,client} #[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour10,bg=colour0] #(uptime -p | cut -d \",\" -f 1,2) #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] %R %a %F #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics]"
+setw -g window-status-format "#[fg=colour10,bg=colour0,nobold,nounderscore,noitalics] [#I:#W] #[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=colour7,bg=colour11,nobold,nounderscore,noitalics] [#I:#W (#{=20:pane_current_command})] #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
+
+# visual indicator of bell in window
+setw -g window-status-bell-style fg=black,bg=red #base06, red
+
+# different active/non-active pane borders
+setw -g pane-active-border-style fg=colour0,bg=colour12
+setw -g pane-border-style fg=colour10,bg=colour0
+
+# }}}
+
+# PLUGINS {{{
 # -----------------------------------------------------------------------------
-
-set-option -g status "on"
-
-# Default statusbar color
-set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
-
-# Default window title colors
-set-window-option -g window-status-style fg=colour214,bg=colour237 # bg=yellow, fg=bg1
-set-window-option -g window-status-current-style fg=colour214,bg=colour237,bold # bg=yellow, fg=bg1
-
-# Default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
-
-# Pane border
-set-option -g pane-active-border-style fg=colour250 #fg2
-set-option -g pane-border-style fg=colour237 #bg1
-
-# Message infos
-set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
-
-# Writing commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
-
-# Pane number display
-set-option -g display-panes-active-colour colour250 #fg2
-set-option -g display-panes-colour colour237 #bg1
-
-# Clock
-set-window-option -g clock-mode-colour colour109 #blue
-
-# Bell
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
-
-## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-justify "left"
-set-option -g status-left-style none
-set-option -g status-left-length "80"
-set-option -g status-right-style none
-set-option -g status-right-length "80"
-set-window-option -g window-status-separator " "
-
-# -----------------------------------------------------------------------------
-# PLUGINS
-# -----------------------------------------------------------------------------
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 run -b '~/.tmux/plugins/tpm/tpm'
+
+# }}}
 
 # vim: set filetype=tmux:
