--- a/tmux.conf
+++ b/tmux.conf
@@ -80,29 +80,31 @@ unbind-key C-z
 
 # STATUS LINE {{{
 # -----------------------------------------------------------------------------
-set -g status-style "bg=colour0"
-set -g message-command-style "fg=colour7"
-set -g status-justify "centre"
-set -g status-left-length "100"
-set -g status "on"
-set -g message-style "bg=colour11,fg=colour7"
-set -g status-right-length "100"
-set -g message-command-style "bg=colour11"
-set -gq status-utf8 "on"
-setw -g window-status-style "fg=colour10,bg=colour0"
-setw -g window-status-activity-style "fg=colour14,bg=colour0"
-setw -g window-status-separator ""
+set-option -g status-style bg=colour0
+set-option -g message-command-style fg=colour7
+set-option -g status-justify centre
+set-option -g status-left-length 100
+set-option -g status on
+set-option -g message-style bg=colour11,fg=colour7
+set-option -g status-right-length 100
+set-option -g message-command-style bg=colour11
+set-option -gq status-utf8 on
+
+set-window-option -g window-status-style fg=colour10,bg=colour0
+set-window-option -g window-status-activity-style fg=colour14,bg=colour0
+set-window-option -g window-status-separator ""
+
 set -g status-left "#[fg=colour15,bg=colour14,bold] #S #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] #(whoami)@#H #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour10,bg=colour0] #{session_attached} #{?session_many_attached,clients,client} #[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour10,bg=colour0] #(uptime -p | cut -d \",\" -f 1,2) #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] %R %a %F #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics]"
 setw -g window-status-format "#[fg=colour10,bg=colour0,nobold,nounderscore,noitalics] [#I:#W] #[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=colour7,bg=colour11,nobold,nounderscore,noitalics] [#I:#W (#{=20:pane_current_command})] #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
 
 # visual indicator of bell in window
-setw -g window-status-bell-style fg=black,bg=red #base06, red
+set-window-option -g window-status-bell-style fg=black,bg=red #base06, red
 
 # different active/non-active pane borders
-setw -g pane-active-border-style fg=colour0,bg=colour12
-setw -g pane-border-style fg=colour10,bg=colour0
+set-window-option -g pane-active-border-style fg=colour0,bg=colour12
+set-window-option -g pane-border-style fg=colour10,bg=colour0
 
 # }}}
 
