--- a/alacritty.yml
+++ b/alacritty.yml
@@ -40,9 +40,28 @@ fonts:
       family: Source Code Pro
       style: Italic
     size: 13.0
+    offset:
+      x: 0
+      y: 0
     use_thin_strokes: true
 
-font: *source_code_pro
+  source_code_pro: &hack
+    normal:
+      family: Hack Nerd Font
+      style: Regular
+    bold:
+      family: Hack Nerd Font
+      style: Bold
+    italic:
+      family: Source Code Pro
+      style: Italic
+    size: 12.0
+    offset:
+      x: 0
+      y: 2
+    use_thin_strokes: true
+
+font: *hack
 
 schemes:
   apprentice: &apprentice
@@ -114,6 +133,6 @@ schemes:
       cyan:    '0x89b482'
       white:   '0xdfbf8e'
 
-colors: *warlock
+colors: *apprentice
 
 # vim: set filetype=yaml:
