Update tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,6 +52,11 @@ bind C-f send-prefix
 # Toggle last window by hitting C-f
 bind-key C-f last-window
 
+# Split horiziontal and vertical splits, instead of % and "
+# Also open them in the same directory
+bind-key v split-window -h -c '#{pane_current_path}'
+bind-key s split-window -v -c '#{pane_current_path}'
+
 # Source file
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -74,6 +79,9 @@ bind-key H resize-pane -L 10
 bind-key J resize-pane -D 10
 bind-key K resize-pane -U 10
 bind-key L resize-pane -R 10
+
+# Disable confirm before killing
+bind-key x kill-pane
 
 # don't suspend client
 unbind-key C-z
@@ -116,6 +124,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+
+set -g @plugin "arcticicestudio/nord-tmux"
+set -g @nord_tmux_no_patched_font "0"
+
 run -b '~/.tmux/plugins/tpm/tpm'
 
 # }}}
