Clean up tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,10 +14,7 @@ set -g focus-events on
 
 # WINDOWS AND PANES {{{
 # -----------------------------------------------------------------------------
-# Show times longer than supposed
 set -g display-panes-time 2000
-
-# tmux messages are dispalyed for 4 seconds
 set -g display-time 4000
 
 # Word separators for automatic word selection
@@ -44,13 +41,13 @@ set-option -g set-titles-string '#H:#S #W #T'
 # -----------------------------------------------------------------------------
 set -g mouse off
 
-# Set prefix to c-f instead of default c-b
+# Set prefix to C-Space instead of default c-b
 unbind C-b
-set -g prefix C-f
-bind C-f send-prefix
+set -g prefix C-Space
+bind C-Space send-prefix
 
 # Toggle last window by hitting C-f
-bind-key C-f last-window
+bind-key C-Space last-window
 
 # Split horiziontal and vertical splits, instead of % and "
 # Also open them in the same directory
@@ -85,36 +82,6 @@ bind-key x kill-pane
 
 # don't suspend client
 unbind-key C-z
-
-# STATUS LINE {{{
-# -----------------------------------------------------------------------------
-set-option -g status-style bg=colour0
-set-option -g message-command-style fg=colour7
-set-option -g status-justify centre
-set-option -g status-left-length 100
-set-option -g status on
-set-option -g message-style bg=colour11,fg=colour7
-set-option -g status-right-length 100
-set-option -g message-command-style bg=colour11
-set-option -gq status-utf8 on
-
-set-window-option -g window-status-style fg=colour10,bg=colour0
-set-window-option -g window-status-activity-style fg=colour14,bg=colour0
-set-window-option -g window-status-separator ""
-
-set -g status-left "#[fg=colour15,bg=colour14,bold] #S #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] #(whoami)@#H #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour10,bg=colour0] #{session_attached} #{?session_many_attached,clients,client} #[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour10,bg=colour0] #(uptime -p | cut -d \",\" -f 1,2) #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour7,bg=colour11] %R %a %F #[fg=colour14,bg=colour11,nobold,nounderscore,noitalics]"
-setw -g window-status-format "#[fg=colour10,bg=colour0,nobold,nounderscore,noitalics] [#I:#W] #[fg=colour0,bg=colour0,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour7,bg=colour11,nobold,nounderscore,noitalics] [#I:#W (#{=20:pane_current_command})] #[fg=colour11,bg=colour0,nobold,nounderscore,noitalics]"
-
-# visual indicator of bell in window
-set-window-option -g window-status-bell-style fg=black,bg=red #base06, red
-
-# different active/non-active pane borders
-set-window-option -g pane-active-border-style fg=colour0,bg=colour12
-set-window-option -g pane-border-style fg=colour10,bg=colour0
-
-# }}}
 
 # PLUGINS {{{
 # -----------------------------------------------------------------------------
