Switch to apprentice theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -92,9 +92,7 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
-set -g @plugin "arcticicestudio/nord-tmux"
-set -g @nord_tmux_no_patched_font "0"
-
+set -g @plugin 'tombin/apprentice-tmux'
 run -b '~/.tmux/plugins/tpm/tpm'
 
 # }}}
