Go back to prefix <C-a>

--- a/tmux.conf
+++ b/tmux.conf
@@ -43,8 +43,8 @@ set -g mouse off
 
 # Set prefix to C-Space instead of default c-b
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix C-a
+bind C-a send-prefix
 
 # Toggle last window by hitting C-f
 bind-key C-Space last-window
