Simplify go setup
- Moved vim-go to opt and added vim-goimports.
- Added a ftplugin for setting the go compiler.

This is a step towards a more 'pure' vim setup.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "submodules/Apprentice"]
 	path = submodules/Apprentice
 	url = https://github.com/romainl/Apprentice
+[submodule "submodules/vim-goimports"]
+	path = submodules/vim-goimports
+	url = https://github.com/mattn/vim-goimports
