--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "submodules/jellybeans"]
 	path = submodules/jellybeans
 	url = https://github.com/nanotech/jellybeans.vim
+[submodule "submodules/ultisnips"]
+	path = submodules/ultisnips
+	url = https://github.com/SirVer/ultisnips
