--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "submodules/ultisnips"]
 	path = submodules/ultisnips
 	url = https://github.com/SirVer/ultisnips
+[submodule "submodules/vim-terraform"]
+	path = submodules/vim-terraform
+	url = https://github.com/hashivim/vim-terraform
