--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,8 +4,10 @@
 	signingkey = 84D80CE9A803D1C5
 
 [alias]
-	ctags             = !.git/hooks/ctags
-	prettylog         = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+	ctags     = !.git/hooks/ctags
+	prettylog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+	exec      = !exec
+	root      = !pwd
 
 [color]
 	diff    = auto
