--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "submodules/tabular"]
 	path = submodules/tabular
 	url = git@github.com:godlygeek/tabular.git
+[submodule "submodules/snipmate"]
+	path = submodules/snipmate
+	url = git@github.com:hardselius/snipmate.vim.git
