--- a/.gitmodules
+++ b/.gitmodules
@@ -1,39 +1,3 @@
-[submodule "submodules/vim-commentary"]
-	path = submodules/vim-commentary
-	url = git@github.com:tpope/vim-commentary.git
-[submodule "submodules/vim-repeat"]
-	path = submodules/vim-repeat
-	url = git@github.com:tpope/vim-repeat.git
-[submodule "submodules/vim-surround"]
-	path = submodules/vim-surround
-	url = git@github.com:tpope/vim-surround.git
-[submodule "submodules/vim-goimports"]
-	path = submodules/vim-goimports
-	url = git@github.com:mattn/vim-goimports
-[submodule "submodules/jellybeans"]
-	path = submodules/jellybeans
-	url = git@github.com:nanotech/jellybeans.vim
-[submodule "submodules/vim-terraform"]
-	path = submodules/vim-terraform
-	url = git@github.com:hashivim/vim-terraform
-[submodule "submodules/editorconfig-vim"]
-	path = submodules/editorconfig-vim
-	url = git@github.com:editorconfig/editorconfig-vim
-[submodule "submodules/tagbar"]
-	path = submodules/tagbar
-	url = git@github.com:majutsushi/tagbar
-[submodule "submodules/vim-nix"]
-	path = submodules/vim-nix
-	url = git@github.com:LnL7/vim-nix
-[submodule "submodules/tabular"]
-	path = submodules/tabular
-	url = git@github.com:godlygeek/tabular.git
-[submodule "submodules/snipmate"]
-	path = submodules/snipmate
-	url = git@github.com:hardselius/snipmate.vim.git
-[submodule "submodules/kotlin-vim"]
-	path = submodules/kotlin-vim
-	url = git@github.com:udalov/kotlin-vim.git
-[submodule "submodules/vim-dim"]
-	path = submodules/vim-dim
-	url = git@github.com:hardselius/vim-dim.git
+[submodule "submodules/large-vimrc"]
+	path = submodules/large-vimrc
+	url = git@github.com:hardselius/large-vimrc.git
