--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,2 @@
-# OSX trash
-.DS_Store
-
-# Homebrew
-Brewfile.lock.json
-
-# Vim-related files
-[._]*.s[a-w][a-z]
-[._]s[a-w][a-z]
-*.un~
-Session.vim
-.netrwhist
-
-# Ignore tmux plugins
-tmux/tmux.symlink/*
-!tmux/tmux.symlink/.keep
-
-# Ignore vim plugins
-vim/vim.symlink/*
-!vim/vim.symlink/.keep
+# ignore the result from nix builds
+result
