--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,15 +34,11 @@ jobs:
         with:
           name: hardselius
           signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
-
-      - name: If scheduled, push commit with updated sources
+            
+      - name: If scheduled, update sources
         if: ${{ github.event_name == 'schedule' && success() }}
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add --all
-          git commit -m "Update sources"
-          git push
+          nix flake update --recreate-lock-file
 
       - name: Build and switch to nix-darwin env
         run: |
@@ -58,3 +54,12 @@ jobs:
           sudo mv /etc/nix/nix.conf /etc/nix/nix.conf.backup-before-darwin
           sudo mv /etc/zshenv /etc/zshenv.backup-before-darwin
           /run/current-system/sw/bin/darwin-rebuild switch --flake .#ghActions
+
+      - name: If scheduled, push commit with updated sources
+        if: ${{ github.event_name == 'schedule' && success() }}
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add --all
+          git commit -m "Update sources"
+          git push
