--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           name: hardselius
           signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
-            
+
       - name: If scheduled, update sources
         if: ${{ github.event_name == 'schedule' && success() }}
         run: |
@@ -54,6 +54,11 @@ jobs:
           sudo mv /etc/nix/nix.conf /etc/nix/nix.conf.backup-before-darwin
           sudo mv /etc/zshenv /etc/zshenv.backup-before-darwin
           /run/current-system/sw/bin/darwin-rebuild switch --flake .#ghActions
+          # Print git config
+          echo " ------------ "
+          echo "| git config |"
+          echo " ------------ "
+          git config --list | grep user
 
       - name: If scheduled, push commit with updated sources
         if: ${{ github.event_name == 'schedule' && success() }}
