Split workflow into smaller steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,67 +17,50 @@ on:
     - cron: '0 0 * * 0' # Every Sunday at midnight UTC
 
 jobs:
-  darwin:
-    name: Build darwin environment
+  build-darwin:
     runs-on: macos-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
-      - name: Install Nix
-        uses: cachix/install-nix-action@v12
+      - uses: cachix/install-nix-action@v12
         with:
           install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20210126_f15f0b8/install
           extra_nix_config: |
             experimental-features = nix-command flakes
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-
-      - name: Setup Cachix
-        uses: cachix/cachix-action@v8
+      - uses: cachix/cachix-action@v8
         with:
           name: hardselius
           signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
-
-      - name: If scheduled, update sources
-        if: ${{ github.event_name == 'schedule' && success() }}
+      - if: ${{ github.event_name == 'schedule' && success() }}
         run: |
           nix flake update --recreate-lock-file
-
-      - name: Build and switch to nix-darwin env
-        run: |
-          # Create /run directory
+      - run: |
           echo -e "run\tprivate/var/run" | sudo tee -a /etc/synthetic.conf >/dev/null
           /System/Library/Filesystems/apfs.fs/Contents/Resources/apfs.util -B 2>/dev/null || true
-          # Prevent conflict between Cachix installed by workflow and the one installed in the config
+      - run: |
           nix-env --set-flag priority 1 cachix
-          # Build and switch to bootstrap config
+      - run: |
           nix build .#darwinConfigurations.bootstrap.system
+      - run: |
           ./result/sw/bin/darwin-rebuild switch --flake .#bootstrap
-          # Build and switch to full config
-          sudo mv /etc/nix/nix.conf /etc/nix/nix.conf.backup-before-darwin
-          sudo mv /etc/zshenv /etc/zshenv.backup-before-darwin
-          /run/current-system/sw/bin/darwin-rebuild switch --flake .#ghActions
-
-      - name: If scheduled, push commit with updated sources
-        if: ${{ github.event_name == 'schedule' && success() }}
+      - run: |
+          . /etc/static/bashrc
+          darwin-rebuild switch --flake .#ghActions
+      - if: ${{ github.event_name == 'schedule' && success() }}
         run: |
           git add --all
           git commit -m "Update sources"
           git push
 
-  linux:
-    name: Build/cache linux environment
+  build-linux:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
-      - name: Install Nix
-        uses: cachix/install-nix-action@v12
+      - uses: cachix/install-nix-action@v12
         with:
           install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20210126_f15f0b8/install
           extra_nix_config: |
@@ -85,17 +68,12 @@ jobs:
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
             substituters = https://cache.nixos.org/ https://hydra.iohk.io
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ=
-
-      - name: Setup Cachix
-        uses: cachix/cachix-action@v8
+      - uses: cachix/cachix-action@v8
         with:
           name: hardselius
           extraPullNames: iohk
           signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
-
-      - name: Build and switch to home-manager env
-        run: |
-          # Prevent conflict between Cachix installed by workflow and the one installed in the config
+      - run: |
           nix-env --set-flag priority 1 cachix
-          # Build and switch to home-manager env
+      - run: |
           nix build .#cloudVM.activationPackage; ./result/activate
