Move nix.conf and zshenv to allow linking
This will also make sure that nix flake stuff works without the
experimental features added to nix.conf.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,8 @@ jobs:
           ./result/sw/bin/darwin-rebuild switch --flake .#bootstrap
       - run: |
           . /etc/static/bashrc
+          sudo mv /etc/nix/nix.conf /etc/nix/nix.conf.backup-before-darwin
+          sudo mv /etc/zshenv /etc/zshenv.backup-before-darwin
           darwin-rebuild switch --flake .#ghActions
       - if: ${{ github.event_name == 'schedule' && success() }}
         run: |
